# flwrCrate

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: realapps.yml  tests.yml
examples/: README.md
examples/quickstart-pytorch/: ro-crate-metadata.json  server_app.py
fl_crate_generator/: __init__.py  crate_builder.py  framework.py  metrics.py  tracker.py
flwrcrate/: __init__.py  crate_builder.py  framework.py  metrics.py  tracker.py
tests/: conftest.py  test_crate_builder.py  test_framework.py  test_integration.py  test_metrics.py  test_real_apps.py
tests/e2e/: sklearn_ci_server_app.py  validate_crate.py
tests/fixtures/fed-engines/: captured_metadata.json  metrics_log.json
tests/fixtures/quickstart-pytorch/: captured_metadata.json  metrics_log.json
tests/fixtures/quickstart-sklearn/: captured_metadata.json  metrics_log.json
