[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flwrcrate"
version = "0.4.0"
description = "Capture a Flower federated learning run and emit an RO-Crate"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "flwr>=1.29.0",
    "rocrate>=0.13",
    "tomli>=2.0; python_version < '3.11'",
]

[tool.hatch.build.targets.wheel]
packages = ["flwrcrate"]
